Compatibility and readability
Improved cross-platform compatability and code structure/readability.

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,9 @@ $RECYCLE.BIN/
 
 # MATLAB autosave files
 *.asv
-
-# gedit autosave files
 *~
+*.cfg
+*.gcfg
 
 # =========================
 # Operating System Files
